# courier-lab

./: Makefile  README.md  jupyter_lite_config.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
content/: __init__.py  __paths__.py
content/data/corpus/: document_index.csv
content/data/dtm/article_corpus_lemma_lc/: article_corpus_lemma_lc_vectorizer_data.json
content/data/resources/: article_corpus.jinja  corpus.yml
content/data/tm/tm-050-v1.0-lowercase/: corpus.yml  model_options.json
content/data/tm/tm-100-v1.0-lowercase/: corpus.yml  model_options.json
content/data/tm/tm-200-v1.0-lowercase/: corpus.yml  model_options.json
content/data/tm/tm-500-v1.0-lowercase/: model_options.json
content/examples/: python.ipynb
content/notebooks/: explore_topic_models.ipynb  scratchpad.ipynb  word_trends.ipynb
content/notebooks/utility/: __init__.py  text_repository.py  utility.js  utility.py
purgatory/: pos_statistics.ipynb  python.ipynb  word_trends.ipynb
scripts/: copy-tm-model  copy-tm-v0.2-models.sh
